fix invisible svg in firefox. close #164

--- a/AssureNote/css/index.css
+++ b/AssureNote/css/index.css
@@ -2,6 +2,9 @@ body {
 	min-height: 100%;
 	margin: 0px;
 	line-height: 20px;
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
 
 .hover li {
